# soroban-render-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  llms-full.md
.github/workflows/: release-plz.yml
src/: bytes.rs  json.rs  lib.rs  markdown.rs  metadata.rs  prelude.rs  registry.rs  router.rs  styles.rs
test_snapshots/registry/tests/: test_emit_aliases.1.json  test_emit_aliases_empty.1.json  test_emit_aliases_single_contract_content.1.json  test_emit_aliases_with_multiple_contracts.1.json  test_emit_aliases_with_underscore_alias.1.json  test_init_and_get.1.json  test_register.1.json  test_unregister.1.json
