[package]
name = "soroban-render-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SDK for building Soroban Render contracts with reduced boilerplate"
repository = "https://github.com/wyhaines/soroban-render-sdk"
readme = "README.md"
keywords = ["soroban", "stellar", "blockchain", "smart-contracts", "render"]
categories = ["no-std", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
default = ["markdown", "json", "router", "styles", "registry"]
markdown = []
json = []
router = []
styles = []
registry = []

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
